# ai_news_scraper

./: .gitignore  README.md  mcp_server.py  pyproject.toml
ai_news_scraper/: __init__.py  cli.py  scraper.py
